# ClearShot

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  gradio_app.py
configs/: evaluation_config.yaml  inference_config.yaml  train_config.yaml
data/scripts/: create_subset.py  download_abo.py  synthesize_degradations.py
docs/: PHASE1_SUMMARY.md  PHASE5_EVALUATION.md  PHASE6_APP.md  Phase5_Report.md  Phase6_Report.md  architecture.md
eda_results/: degradation_impact_metrics.csv  degraded_image_stats.csv  eda_report.md  summary_stats.csv
evaluation_results/report/: paired_ttests_vs_clearshot.csv  summary_overall.csv  summary_per_category__lpips.csv  summary_per_category__psnr.csv  summary_per_category__ssim.csv
notebooks/: 04_inference_demo.py  05_evaluation.py  run_eda.py
src/: __init__.py
src/evaluation/: __init__.py  analysis.py  baselines.py  metrics.py  runner.py
src/models/: diffusion_enhancer.py  super_resolution.py
src/pipeline/: enhancement_pipeline.py
src/preprocessing/: background_removal.py  edge_extraction.py
src/training/: dataset.py  degradation.py  train_lora.py
tests/: test_baselines_classical.py  test_metrics.py  test_pipeline.py  test_preprocessing.py  test_runner_smoke.py
