[project]
name = "clearshot"
version = "0.1.0"
description = "AI-Powered Product Photo Enhancement for E-Commerce using Generative Diffusion Models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Group 3", email = "group3@umd.edu"},
]
keywords = ["diffusion-models", "image-enhancement", "product-photography", "stable-diffusion", "lora", "controlnet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Repository = "https://github.com/ViVas970811/ClearShot"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["src*"]
